--- a/index.html
+++ b/index.html
@@ -1,11 +1,33 @@
-<!DOCTYPE html>
 <html>
 <head>
 <title>
-Yuta Kusakabe
+  Yuta Kusakabe
 </title>
 </head>
 <body>
-under construction
+  <table>
+    <tr>
+      <td>
+        <a href="img/joku-iko.jpg"><img src="img/joku-iko.jpg" height=240 width=180></a>
+      </td>
+      <td>
+        <h1>Yuta Kusakabe</h1>
+        <a href="http://www.math.sci.osaka-u.ac.jp/eng/index.html" target="_blank">Department of Mathematics<br>
+        Graduate School of Science<br>
+        Osaka University</a><br>
+        Toyonaka, Osaka 560-0043, Japan<br>
+        <br>
+        E-mail: y-kusakabe[at]cr.math.sci.osaka-u.ac.jp, kusaka<strong>p</strong>e[at]gmail.com<br>
+        <br>
+        Research interests: Elliptic complex geometry (Oka manifold, Stein space)<br>
+        <br>
+        Photo: Penguins' Jôku-Ikô Principle <上空移行の原理> (<a href="http://www.math.sci.osaka-u.ac.jp/eng/index.html" target="_blank">[Oka, 1936]</a>: Oka's Jôku-Ikô Principle)
+      </td>
+    </tr>
+  </table>
+  <hr>
+  <script>
+    document.write('<div style="text-align:right">Last updated: ' + document.lastModified+'</div>');
+  </script>
 </body>
 </html>
