--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <br>
         Research interests: Elliptic complex geometry (Oka manifold, Stein space)<br>
         <br>
-        Photo: Penguins' Jôku-Ikô Principle <上空移行の原理> (<a href="http://www.math.sci.osaka-u.ac.jp/eng/index.html" target="_blank">[Oka, 1936]</a>: Oka's Jôku-Ikô Principle)
+        Photo: Penguins' Jôku-Ikô Principle <上空移行の原理> (<a href="http://www.nara-wu.ac.jp/aic/gdb/nwugdb/oka/fram/koron_eng.html" target="_blank">[Oka, 1936]</a>: Oka's Jôku-Ikô Principle)
       </td>
     </tr>
   </table>
