--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <table>
     <tr>
       <td>
-        <a href="img/joku-iko.jpg"><img src="img/joku-iko.jpg" height=240 width=180></a>
+        <a href="img/joku-iko.jpg"><img src="img/joku-iko_s.jpg" height=320 width=240></a>
       </td>
       <td>
         <h1>Yuta Kusakabe</h1>
