--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
       </td>
       <td>
         <h1>Yuta Kusakabe</h1>
+        Ph.D. Student<br>
+        <br>
         <a href="http://www.math.sci.osaka-u.ac.jp/eng/index.html" target="_blank">Department of Mathematics<br>
         Graduate School of Science<br>
         Osaka University</a><br>
@@ -19,12 +21,63 @@
         <br>
         E-mail: y-kusakabe[at]cr.math.sci.osaka-u.ac.jp, kusaka<strong>p</strong>e[at]gmail.com<br>
         <br>
-        Research interests: Elliptic complex geometry (Oka manifold, Stein space)<br>
+        Research interests: Several Complex Variables, Complex Analytic Geometry<br>
+        Keywords: Oka principle, Oka manifold, Stein space, ellipticity<br>
         <br>
-        Photo: Penguins' Jôku-Ikô Principle <上空移行の原理> (<a href="http://www.nara-wu.ac.jp/aic/gdb/nwugdb/oka/fram/koron_eng.html" target="_blank">[Oka, 1936]</a>: Oka's Jôku-Ikô Principle)
+        Photo: Penguins' Jôku-Ikô <上空移行><br>
+        (<a href="http://www.nara-wu.ac.jp/aic/gdb/nwugdb/oka/fram/koron_eng.html" target="_blank">[Oka, 1936]</a>: Oka's Jôku-Ikô Principle)
       </td>
     </tr>
   </table>
+  <hr>
+  under construction
+  <hr>
+  <h2>Papers</h2>
+  <ol reversed>
+    <li>
+      Thom's jet transversality theorem for regular maps.<br>
+      <a href="https://arxiv.org/abs/2004.13539" target="_blank">arXiv:2004.13539</a>.
+    </li>
+    <li>
+      An implicit function theorem for sprays and applications to Oka theory.<br>
+      <a href="https://arxiv.org/abs/2004.12397" target="_blank">arXiv:2004.12397</a>.
+    </li>
+    <li>
+      Elliptic characterization and unification of Oka maps.<br>
+      <a href="https://arxiv.org/abs/2003.03757" target="_blank">arXiv:2003.03757</a>.
+    </li>
+    <li>
+      Elliptic characterization and localization of Oka manifolds.<br>
+      Indiana Univ. Math. J., to appear.<br>
+      <a href="https://arxiv.org/abs/1808.06290" target="_blank">arXiv:1808.06290</a>.
+    </li>
+    <li>
+      Oka complements of countable sets and nonelliptic Oka manifolds.<br>
+      Proc. Amer. Math. Soc., 148(3):1233–1238, 2020.<br>
+      <a href="https://arxiv.org/abs/1907.12024" target="_blank">arXiv:1907.12024</a>.
+    </li>
+    <li>
+      Dense holomorphic curves in spaces of holomorphic maps and applications to universal maps.<br>
+      Internat. J. Math., 28(4):1750028, 15, 2017.<br>
+      <a href="https://arxiv.org/abs/1702.08022" target="_blank">arXiv:1702.08022</a>.
+    </li>
+  </ol>
+  <hr>
+  <h2>Notes</h2>
+  <ol reversed>
+    <li>
+      <a href="pdf/kokyuroku_flexibility.pdf" target="_blank">Characterizations of Oka manifolds by holomorphic flexibilities</a>. (Japanese)</br>
+      <a href="https://wwp.shizuoka.ac.jp/masanori-adachi/2017rims/" target="_blank">Topology of pseudoconvex domains and analysis of reproducing kernels</a>, RIMS Kôkyûroku, to appear.
+    </li>
+    <li>
+      <a href="pdf/kansuron_ellipticity.pdf" target="_blank">岡の原理と楕円性</a>. (Japanese)</br>
+      第62回函数論シンポジウム講演アブストラクト, 2019.
+    </li>
+    <li>
+      <a href="pdf/survey_homotopy.pdf" target="_blank">Survey of holomorphic homotopy theory</a>. (Japanese)</br>
+      代数学特論レポート, 2018.
+    </li>
+  </ol>
   <hr>
   <script>
     document.write('<div style="text-align:right">Last updated: ' + document.lastModified+'</div>');
