--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <a href="img/joku-iko.jpg"><img src="img/joku-iko_s.jpg" height=320 width=240></a>
       </td>
       <td>
-        <h1>Yuta Kusakabe</h1>
+        <h1>Yuta Kusakabe / 日下部佑太</h1>
         Ph.D. Student<br>
         <br>
         <a href="http://www.math.sci.osaka-u.ac.jp/eng/index.html" target="_blank">Department of Mathematics<br>
