--- a/index.html
+++ b/index.html
@@ -1,8 +1,18 @@
 <html>
 <head>
-<title>
-  Yuta Kusakabe
-</title>
+  <title>
+    Yuta Kusakabe
+  </title>
+  <script>
+    MathJax = {
+      tex: {
+        inlineMath: [['$', '$'], ['\\(', '\\)']]
+      }
+    };
+  </script>
+  <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+  <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+  <meta charset="UTF-8">
 </head>
 <body>
   <table>
@@ -13,11 +23,12 @@
       <td>
         <h1>Yuta Kusakabe / 日下部佑太</h1>
         Ph.D. Student<br>
-        <br>
-        <a href="http://www.math.sci.osaka-u.ac.jp/eng/index.html" target="_blank">Department of Mathematics<br>
-        Graduate School of Science<br>
-        Osaka University</a><br>
+        <a href="http://www.math.sci.osaka-u.ac.jp/eng/index.html" target="_blank">Department of Mathematics,
+        Graduate School of Science,
+        Osaka University</a>,
         Toyonaka, Osaka 560-0043, Japan<br>
+        <br>
+        <a href="#CV">Curriculum Vitae</a><br>
         <br>
         E-mail: y-kusakabe[at]cr.math.sci.osaka-u.ac.jp, kusaka<strong>p</strong>e[at]gmail.com<br>
         <br>
@@ -29,36 +40,36 @@
       </td>
     </tr>
   </table>
-  <hr>
-  under construction
+
   <hr>
   <h2>Papers</h2>
   <ol reversed>
     <li>
       Thom's jet transversality theorem for regular maps.<br>
-      <a href="https://arxiv.org/abs/2004.13539" target="_blank">arXiv:2004.13539</a>.
-    </li>
-    <li>
-      An implicit function theorem for sprays and applications to Oka theory.<br>
-      <a href="https://arxiv.org/abs/2004.12397" target="_blank">arXiv:2004.12397</a>.
+      <a href="https://arxiv.org/abs/2004.13539" target="_blank">arXiv:2004.13539</a>
     </li>
     <li>
       Elliptic characterization and unification of Oka maps.<br>
-      <a href="https://arxiv.org/abs/2003.03757" target="_blank">arXiv:2003.03757</a>.
+      <a href="https://arxiv.org/abs/2003.03757" target="_blank">arXiv:2003.03757</a>
+    </li>
+    <li>
+      An implicit function theorem for sprays and applications to Oka theory.<br>
+      Internat. J. Math., to appear<br>
+      <a href="https://arxiv.org/abs/2004.12397" target="_blank">arXiv:2004.12397</a>
     </li>
     <li>
       Elliptic characterization and localization of Oka manifolds.<br>
-      Indiana Univ. Math. J., to appear.<br>
-      <a href="https://arxiv.org/abs/1808.06290" target="_blank">arXiv:1808.06290</a>.
+      Indiana Univ. Math. J., to appear<br>
+      <a href="https://arxiv.org/abs/1808.06290" target="_blank">arXiv:1808.06290</a>
     </li>
     <li>
       Oka complements of countable sets and nonelliptic Oka manifolds.<br>
-      Proc. Amer. Math. Soc., 148(3):1233–1238, 2020.<br>
-      <a href="https://arxiv.org/abs/1907.12024" target="_blank">arXiv:1907.12024</a>.
+      <a href="https://doi.org/10.1090/proc/14832" target="_blank"><a href="https://arxiv.org/abs/1907.12024" target="_blank">Proc. Amer. Math. Soc., 148(3):1233–1238, 2020</a><br>
+      <a href="https://arxiv.org/abs/1907.12024" target="_blank">arXiv:1907.12024</a>
     </li>
     <li>
       Dense holomorphic curves in spaces of holomorphic maps and applications to universal maps.<br>
-      Internat. J. Math., 28(4):1750028, 15, 2017.<br>
+      <a href="https://doi.org/10.1142/S0129167X17500288" target="_blank">Internat. J. Math., 28(4):1750028, 15, 2017</a><br>
       <a href="https://arxiv.org/abs/1702.08022" target="_blank">arXiv:1702.08022</a>.
     </li>
   </ol>
@@ -67,17 +78,268 @@
   <ol reversed>
     <li>
       <a href="pdf/kokyuroku_flexibility.pdf" target="_blank">Characterizations of Oka manifolds by holomorphic flexibilities</a>. (Japanese)</br>
-      <a href="https://wwp.shizuoka.ac.jp/masanori-adachi/2017rims/" target="_blank">Topology of pseudoconvex domains and analysis of reproducing kernels</a>, RIMS Kôkyûroku, to appear.
+      <a href="https://wwp.shizuoka.ac.jp/masanori-adachi/2017rims/" target="_blank">Topology of pseudoconvex domains and analysis of reproducing kernels</a>, RIMS Kôkyûroku, to appear
     </li>
     <li>
       <a href="pdf/kansuron_ellipticity.pdf" target="_blank">岡の原理と楕円性</a>. (Japanese)</br>
-      第62回函数論シンポジウム講演アブストラクト, 2019.
+      第62回函数論シンポジウム講演アブストラクト, 2019
     </li>
     <li>
       <a href="pdf/survey_homotopy.pdf" target="_blank">Survey of holomorphic homotopy theory</a>. (Japanese)</br>
-      代数学特論レポート, 2018.
+      代数学特論レポート, 2018
     </li>
   </ol>
+  <hr>
+  <h2>Talks</h2>
+  <ol reversed>
+    <li>
+      Oka complements of countable sets and non-elliptic Oka manifolds.<br>
+      <a href="https://sites.google.com/site/scvwintersemi2019/" target="_blank">Winter Seminar on Several Complex Variables 2019</a>, Tohoku University, 21–23 December 2019
+    </li>
+    <li>
+      柏原の定理と $\partial\bar\partial$-lemma.<br>
+      <a href="http://ktakayuki.github.io/conf2019_2/ktcmid.html" target="_blank">Kodaira's Theory on Complex Manifolds and its Development</a>, Osaka City University, 8–9 December 2019
+    </li>
+    <li>
+      Dense entire curves and Oka manifolds.<br>
+      <a href="https://shotanimoto.wordpress.com/rims-symposia-rational-points-on-higher-dimensional-varieties/" target="_blank">Rational Points on Higher Dimensional Varieties</a>, Kyoto University, 2–6 December 2019
+    </li>
+    <li>
+      岡の原理と楕円性.<br>
+      <a href="https://sites.google.com/view/62sympft/" target="_blank">62nd Symposium on Function Theory</a>, Daido University, 2–4 November 2019
+    </li>
+    <li>
+      Elliptic characterization and localization of Oka manifolds.<br>
+      <a href="http://www.math.is.tohoku.ac.jp/~sugawa/TCAS/" target="_blank">Tohoku Complex Analysis Seminar</a>, Tohoku University, 2 October 2019
+    </li>
+    <li>
+      岡多様体と楕円性.<br>
+      <a href="https://sites.google.com/view/casummerseminar2019" target="_blank">54th Summer Seminar on Function Theory</a>, Izu Nagaoka Onsen Otori-so, Shizuoka, 28–30 August 2019
+    </li>
+    <li>
+      Oka principle and relative ellipticity.<br>
+      <a href="https://sites.google.com/view/workshop-hmptcg2019" target="_blank">Workshop on Holomorphic Maps, Pluripotentials and Complex Geometry</a>, Shizuoka Prefecture Gender Equality Center "Azalea", Shizuoka, 26–29 March 2019
+    </li>
+    <li>
+      岡の原理と楕円性 (1 & 2).<br>
+      <a href="https://sites.google.com/view/contsingdiff2019" target="_blank">Contact structures, Singularities, Differential Equations and Related Topics</a>, Shizuoka Prefecture Gender Equality Center "Azalea", Shizuoka, 28–31 January 2019
+    </li>
+    <li>
+      Elliptic characterization and localization of Oka manifolds.<br>
+      <a href="https://u-lab.my-pharm.ac.jp/~noda/cnf/kanazawa24e.html" target="_blank">The 24th Symposium on Complex Geometry</a>, Shiinoki Cultural Complex, Ishikawa, 13–16 November 2018
+    </li>
+    <li>
+      Elliptic characterization and localization of Oka manifolds.<br>
+      <a href="https://conferences.matheo.si/event/22/" target="_blank">Stein Manifolds and Holomorphic Mappings 2018</a>, University of Ljubljana, 17–21 September 2018
+    </li>
+    <li>
+      Elliptic characterization and localization of Oka manifolds.<br>
+      <a href="https://sites.google.com/site/casummerseminar2018/" target="_blank">53rd Summer Seminar on Function Theory</a>, Active Resorts FUKUOKA YAHATA, Fukuoka, 24–26 August 2018
+    </li>
+    <li>
+      Holomorphic flexibility properties of mapping spaces.<br>
+      <a href="https://sites.google.com/site/scvhayama/2018" target="_blank">HAYAMA Symposium on Complex Analysis in Several Variables XX & Pacific Rim Complex-Symplectic Geometry Conference</a>, Shonan Village Center, Kanagawa, 13–17 July 2018
+    </li>
+    <li>
+      Holomorphic maps with dense images.<br>
+      <a href="https://wwp.shizuoka.ac.jp/masanori-adachi/2017winter/" target="_blank">Winter Seminar on Several Complex Variables 2017</a>, Tokyo University of Science, 22–24 December 2017
+    </li>
+    <li>
+      Dense holomorphic curves in spaces of holomorphic maps.<br>
+      <a href="https://wwp.shizuoka.ac.jp/masanori-adachi/2017ymwscv/" target="_blank">Young Mathematicians Workshop on Several Complex Variables and Complex Geometry 2017</a>, Capital Normal University, 9–11 December 2017
+    </li>
+    <li>
+      Characterizations of Oka manifolds by entire curves.<br>
+      <a href="https://wwp.shizuoka.ac.jp/masanori-adachi/2017rims/" target="_blank">Topology of pseudoconvex domains and analysis of reproducing kernels</a>, Kyoto University, 20–22 November 2017
+    </li>
+    <li>
+      Dense holomorphic curves and universal holomorphic maps.<br>
+      <a href="https://sites.google.com/site/summerseminar2017/" target="_blank">52nd Summer Seminar on Function Theory</a>, Kanpo no Yado Yanagawa, Fukuoka, 6–8 September 2017
+    </li>
+    <li>
+      Dense holomorphic curves in spaces of holomorphic maps.<br>
+      Seminar on Analytic Geometry, Nagoya University, 1 May 2017
+    </li>
+    <li>
+      Dense holomorphic curves in spaces of holomorphic maps.<br>
+      <a href="https://www.ms.u-tokyo.ac.jp/seminar/2017/sem17-072.html" target="_blank">Seminar on Geometric Complex Analysis</a>, The University of Tokyo, 17 April 2017
+    </li>
+    <li>
+      Dense holomorphic curves in spaces of holomorphic maps.<br>
+      <a href="http://www.math.sci.osaka-u.ac.jp/seminar/semHist2017.html" target="_blank">Geometry Seminar</a>, Osaka University, 10 April 2017
+    </li>
+    <li>
+      Dense holomorphic curves in spaces of holomorphic maps.<br>
+      Komaba Seminar on Complex Geometry, The University of Tokyo, 6–8 March 2017
+    </li>
+    <li>
+      Holomorphic flexibility properties of configuration spaces, symmetric products and Douady spaces.<br>
+      <a href="https://sites.google.com/view/hirokazu-shimauchi/51th-summer-seminar" target="_blank">51st Summer Seminar on Function Theory</a>, Hotel Sekifu, Yamanashi, 2–4 September 2016
+    </li>
+  </ol>
+  <hr>
+  <a name="CV"><h2>Curriculum Vitae</h2></a>
+  Yuta Kusakabe<br>
+  Born on May 22, 1993 in Aichi, Japan.<br>
+  <h3>Education</h3>
+  <table>
+    <tr>
+      <td valign="top">
+        March 2018
+      </td>
+      <td>
+      </td>
+      <td>
+        Master of Science<br>
+        Graduate School of Science, Osaka University<br>
+        Adivisor: Katsutoshi Yamanoi
+      </td>
+    </tr>
+    <tr>
+      <td valign="top">
+        March 2016
+      </td>
+      <td>
+      </td>
+      <td>
+        Bachelor of Science<br>
+        School of Science, Nagoya University<br>
+        Advisor: Takeo Ohsawa
+      </td>
+    </tr>
+  </table>
+  <h3>Employment / Fellowships</h3>
+  <table>
+    <tr>
+      <td valign="top">
+        April 2018–
+      </td>
+      <td>
+      </td>
+      <td>
+        JSPS Research Fellow (DC1)<br>
+        Japan Society for the Promotion of Science
+      </td>
+    </tr>
+    <tr>
+      <td valign="top">
+        April 2017–March 2018
+      </td>
+      <td>
+      </td>
+      <td>
+        Research Assistant<br>
+        Graduate School of Science, Osaka University
+      </td>
+    </tr>
+  </table>
+  <h3>Teaching</h3>
+  Teaching Assistant at Graduate School of Science, Osaka University:
+  <table>
+    <tr>
+      <td valign="top">
+        April 2020–
+      </td>
+      <td>
+      </td>
+      <td>
+        Advanced Complex Analysis (Exercise Session)<br>
+        Lecturer: Shinpei Baba
+      </td>
+    </tr>
+    <tr>
+      <td valign="top">
+        October 2019–March 2020
+      </td>
+      <td>
+      </td>
+      <td>
+        Geometry 2 (Exercise Session)<br>
+        Lecturer: Yasuhiro Hara
+      </td>
+    </tr>
+    <tr>
+      <td valign="top">
+        October 2019–March 2020
+      </td>
+      <td>
+      </td>
+      <td>
+        Geometry 1 (Exercise Session)<br>
+        Lecturer: Yoshihiko Matsumoto
+      </td>
+    </tr>
+    <tr>
+      <td valign="top">
+        April 2019–September 2019
+      </td>
+      <td>
+      </td>
+      <td>
+        Advanced Complex Analysis (Exercise Session)<br>
+        Lecturer: Katsutoshi Yamanoi
+      </td>
+    </tr>
+    <tr>
+      <td valign="top">
+        April 2019–September 2019
+      </td>
+      <td>
+      </td>
+      <td>
+        Advanced Calculus (Exercise Session)<br>
+        Lecturer: Takahisa Inui
+      </td>
+    </tr>
+    <tr>
+      <td valign="top">
+        October 2018–March 2019
+      </td>
+      <td>
+      </td>
+      <td>
+        Complex Analysis (Exercise Session)<br>
+        Lecturer: Hideaki Sunagawa
+      </td>
+    </tr>
+    <tr>
+      <td valign="top">
+        April 2018–September 2018
+      </td>
+      <td>
+      </td>
+      <td>
+        Point-Set Topology and Multivariable Calculus (Exercise Session)<br>
+        Lecturer: Kazuki Tokimoto
+      </td>
+    </tr>
+  </table>
+  <br>
+  Teaching Assistant at Center for Education in Liberal Arts and Sciences, Osaka University:
+  <table>
+    <tr>
+      <td valign="top">
+        October 2017–March 2018
+      </td>
+      <td>
+      </td>
+      <td>
+        Calculus B (Problem Session)<br>
+        Lecturer: Naotake Takao
+      </td>
+    </tr>
+    <tr>
+      <td valign="top">
+        April 2017–September 2017
+      </td>
+      <td>
+      </td>
+      <td>
+        Calculus A (Problem Session)<br>
+        Lecturer: Naotake Takao
+      </td>
+    </tr>
+  </table>
   <hr>
   <script>
     document.write('<div style="text-align:right">Last updated: ' + document.lastModified+'</div>');
