--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+  <meta charset="UTF-8">
   <title>
     Yuta Kusakabe
   </title>
@@ -12,35 +13,43 @@
   </script>
   <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
   <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
-  <meta charset="UTF-8">
+  <style>
+    dt{
+      float:left;
+    }
+    dd{
+      margin-left:200px;
+    }
+  </style>
 </head>
 <body>
-  <table>
-    <tr>
-      <td>
-        <a href="img/joku-iko.jpg"><img src="img/joku-iko_s.jpg" height=320 width=240></a>
-      </td>
-      <td>
-        <h1>Yuta Kusakabe / 日下部佑太</h1>
-        Ph.D. Student<br>
-        <a href="http://www.math.sci.osaka-u.ac.jp/eng/index.html" target="_blank">Department of Mathematics,
-        Graduate School of Science,
-        Osaka University</a>,
-        Toyonaka, Osaka 560-0043, Japan<br>
-        <br>
-        <a href="#CV">Curriculum Vitae</a><br>
-        <br>
-        E-mail: y-kusakabe[at]cr.math.sci.osaka-u.ac.jp, kusaka<strong>p</strong>e[at]gmail.com<br>
-        <br>
-        Research interests: Several Complex Variables, Complex Analytic Geometry<br>
-        Keywords: Oka principle, Oka manifold, Stein space, ellipticity<br>
-        <br>
-        Photo: Penguins' Jôku-Ikô <上空移行><br>
-        (<a href="http://www.nara-wu.ac.jp/aic/gdb/nwugdb/oka/fram/koron_eng.html" target="_blank">[Oka, 1936]</a>: Oka's Jôku-Ikô Principle)
-      </td>
-    </tr>
-  </table>
-
+  <div style="display:table">
+    <div style="display:table-cell;vertical-align:middle">
+      <a href="img/joku-iko.jpg"><img src="img/joku-iko_s.jpg" style="width:240px;margin:10px"></a>
+    </div>
+    <div style="display:table-cell;vertical-align:middle">
+      <header><h1>Yuta Kusakabe / 日下部佑太</h1></header>
+      <main>
+        <p>Ph.D. Student</p>
+        <p>
+          <a href="http://www.math.sci.osaka-u.ac.jp/eng/index.html" target="_blank">Department of Mathematics,
+          Graduate School of Science,
+          Osaka University</a>,
+          Toyonaka, Osaka 560-0043, Japan
+        </p>
+        <p><a href="#CV">Curriculum Vitae</a></p>
+        <p>
+          E-mail: y-kusakabe[at]cr.math.sci.osaka-u.ac.jp, kusaka<strong>p</strong>e[at]gmail.com</p>
+          Research interests: Several Complex Variables, Complex Analytic Geometry<br>
+          Keywords: Oka principle, Oka manifold, Stein space, ellipticity
+        </p>
+        <p>
+          Photo: Penguins' Jôku-Ikô <上空移行><br>
+          (<a href="http://www.nara-wu.ac.jp/aic/gdb/nwugdb/oka/fram/koron_eng.html" target="_blank">[Oka, 1936]</a>: Oka's Jôku-Ikô Principle)
+        </p>
+      </main>
+    </div>
+  </div>
   <hr>
   <h2>Papers</h2>
   <ol reversed>
@@ -77,15 +86,16 @@
   <h2>Notes</h2>
   <ol reversed>
     <li>
-      <a href="pdf/kokyuroku_flexibility.pdf" target="_blank">Characterizations of Oka manifolds by holomorphic flexibilities</a>. (Japanese)</br>
-      <a href="https://wwp.shizuoka.ac.jp/masanori-adachi/2017rims/" target="_blank">Topology of pseudoconvex domains and analysis of reproducing kernels</a>, RIMS Kôkyûroku, to appear
+      <a href="pdf/kokyuroku_flexibility.pdf" target="_blank">Characterizations of Oka manifolds by holomorphic flexibilities</a>. (Japanese)<br>
+      <a href="https://wwp.shizuoka.ac.jp/masanori-adachi/2017rims/" target="_blank">Topology of pseudoconvex domains and analysis of reproducing kernels</a>,
+      RIMS Kôkyûroku, to appear
     </li>
     <li>
-      <a href="pdf/kansuron_ellipticity.pdf" target="_blank">岡の原理と楕円性</a>. (Japanese)</br>
+      <a href="pdf/kansuron_ellipticity.pdf" target="_blank">岡の原理と楕円性</a>. (Japanese)<br>
       第62回函数論シンポジウム講演アブストラクト, 2019
     </li>
     <li>
-      <a href="pdf/survey_homotopy.pdf" target="_blank">Survey of holomorphic homotopy theory</a>. (Japanese)</br>
+      <a href="pdf/survey_homotopy.pdf" target="_blank">Survey of holomorphic homotopy theory</a>. (Japanese)<br>
       代数学特論レポート, 2018
     </li>
   </ol>
@@ -94,252 +104,168 @@
   <ol reversed>
     <li>
       Oka complements of countable sets and non-elliptic Oka manifolds.<br>
-      <a href="https://sites.google.com/site/scvwintersemi2019/" target="_blank">Winter Seminar on Several Complex Variables 2019</a>, Tohoku University, 21–23 December 2019
+      <a href="https://sites.google.com/site/scvwintersemi2019/" target="_blank">Winter Seminar on Several Complex Variables 2019</a>,
+      Tohoku University, 21–23 December 2019
     </li>
     <li>
       柏原の定理と $\partial\bar\partial$-lemma.<br>
-      <a href="http://ktakayuki.github.io/conf2019_2/ktcmid.html" target="_blank">Kodaira's Theory on Complex Manifolds and its Development</a>, Osaka City University, 8–9 December 2019
+      <a href="http://ktakayuki.github.io/conf2019_2/ktcmid.html" target="_blank">Kodaira's Theory on Complex Manifolds and its Development</a>,
+      Osaka City University, 8–9 December 2019
     </li>
     <li>
       Dense entire curves and Oka manifolds.<br>
-      <a href="https://shotanimoto.wordpress.com/rims-symposia-rational-points-on-higher-dimensional-varieties/" target="_blank">Rational Points on Higher Dimensional Varieties</a>, Kyoto University, 2–6 December 2019
+      <a href="https://shotanimoto.wordpress.com/rims-symposia-rational-points-on-higher-dimensional-varieties/" target="_blank">Rational Points on Higher Dimensional Varieties</a>,
+      Kyoto University, 2–6 December 2019
     </li>
     <li>
       岡の原理と楕円性.<br>
-      <a href="https://sites.google.com/view/62sympft/" target="_blank">62nd Symposium on Function Theory</a>, Daido University, 2–4 November 2019
+      <a href="https://sites.google.com/view/62sympft/" target="_blank">62nd Symposium on Function Theory</a>,
+      Daido University, 2–4 November 2019
     </li>
     <li>
       Elliptic characterization and localization of Oka manifolds.<br>
-      <a href="http://www.math.is.tohoku.ac.jp/~sugawa/TCAS/" target="_blank">Tohoku Complex Analysis Seminar</a>, Tohoku University, 2 October 2019
+      <a href="http://www.math.is.tohoku.ac.jp/~sugawa/TCAS/" target="_blank">Tohoku Complex Analysis Seminar</a>,
+      Tohoku University, 2 October 2019
     </li>
     <li>
       岡多様体と楕円性.<br>
-      <a href="https://sites.google.com/view/casummerseminar2019" target="_blank">54th Summer Seminar on Function Theory</a>, Izu Nagaoka Onsen Otori-so, Shizuoka, 28–30 August 2019
+      <a href="https://sites.google.com/view/casummerseminar2019" target="_blank">54th Summer Seminar on Function Theory</a>,
+      Izu Nagaoka Onsen Otori-so, Shizuoka, 28–30 August 2019
     </li>
     <li>
       Oka principle and relative ellipticity.<br>
-      <a href="https://sites.google.com/view/workshop-hmptcg2019" target="_blank">Workshop on Holomorphic Maps, Pluripotentials and Complex Geometry</a>, Shizuoka Prefecture Gender Equality Center "Azalea", Shizuoka, 26–29 March 2019
+      <a href="https://sites.google.com/view/workshop-hmptcg2019" target="_blank">Workshop on Holomorphic Maps, Pluripotentials and Complex Geometry</a>,
+      Shizuoka Prefecture Gender Equality Center "Azalea", Shizuoka, 26–29 March 2019
     </li>
     <li>
       岡の原理と楕円性 (1 & 2).<br>
-      <a href="https://sites.google.com/view/contsingdiff2019" target="_blank">Contact structures, Singularities, Differential Equations and Related Topics</a>, Shizuoka Prefecture Gender Equality Center "Azalea", Shizuoka, 28–31 January 2019
+      <a href="https://sites.google.com/view/contsingdiff2019" target="_blank">Contact structures, Singularities, Differential Equations and Related Topics</a>,
+      Shizuoka Prefecture Gender Equality Center "Azalea", Shizuoka, 28–31 January 2019
     </li>
     <li>
       Elliptic characterization and localization of Oka manifolds.<br>
-      <a href="https://u-lab.my-pharm.ac.jp/~noda/cnf/kanazawa24e.html" target="_blank">The 24th Symposium on Complex Geometry</a>, Shiinoki Cultural Complex, Ishikawa, 13–16 November 2018
+      <a href="https://u-lab.my-pharm.ac.jp/~noda/cnf/kanazawa24e.html" target="_blank">The 24th Symposium on Complex Geometry</a>,
+      Shiinoki Cultural Complex, Ishikawa, 13–16 November 2018
     </li>
     <li>
       Elliptic characterization and localization of Oka manifolds.<br>
-      <a href="https://conferences.matheo.si/event/22/" target="_blank">Stein Manifolds and Holomorphic Mappings 2018</a>, University of Ljubljana, 17–21 September 2018
+      <a href="https://conferences.matheo.si/event/22/" target="_blank">Stein Manifolds and Holomorphic Mappings 2018</a>,
+      University of Ljubljana, 17–21 September 2018
     </li>
     <li>
       Elliptic characterization and localization of Oka manifolds.<br>
-      <a href="https://sites.google.com/site/casummerseminar2018/" target="_blank">53rd Summer Seminar on Function Theory</a>, Active Resorts FUKUOKA YAHATA, Fukuoka, 24–26 August 2018
+      <a href="https://sites.google.com/site/casummerseminar2018/" target="_blank">53rd Summer Seminar on Function Theory</a>,
+      Active Resorts FUKUOKA YAHATA, Fukuoka, 24–26 August 2018
     </li>
     <li>
       Holomorphic flexibility properties of mapping spaces.<br>
-      <a href="https://sites.google.com/site/scvhayama/2018" target="_blank">HAYAMA Symposium on Complex Analysis in Several Variables XX & Pacific Rim Complex-Symplectic Geometry Conference</a>, Shonan Village Center, Kanagawa, 13–17 July 2018
+      <a href="https://sites.google.com/site/scvhayama/2018" target="_blank">HAYAMA Symposium on Complex Analysis in Several Variables XX & Pacific Rim Complex-Symplectic Geometry Conference</a>,
+      Shonan Village Center, Kanagawa, 13–17 July 2018
     </li>
     <li>
       Holomorphic maps with dense images.<br>
-      <a href="https://wwp.shizuoka.ac.jp/masanori-adachi/2017winter/" target="_blank">Winter Seminar on Several Complex Variables 2017</a>, Tokyo University of Science, 22–24 December 2017
+      <a href="https://wwp.shizuoka.ac.jp/masanori-adachi/2017winter/" target="_blank">Winter Seminar on Several Complex Variables 2017</a>,
+      Tokyo University of Science, 22–24 December 2017
     </li>
     <li>
       Dense holomorphic curves in spaces of holomorphic maps.<br>
-      <a href="https://wwp.shizuoka.ac.jp/masanori-adachi/2017ymwscv/" target="_blank">Young Mathematicians Workshop on Several Complex Variables and Complex Geometry 2017</a>, Capital Normal University, 9–11 December 2017
+      <a href="https://wwp.shizuoka.ac.jp/masanori-adachi/2017ymwscv/" target="_blank">Young Mathematicians Workshop on Several Complex Variables and Complex Geometry 2017</a>,
+      Capital Normal University, 9–11 December 2017
     </li>
     <li>
       Characterizations of Oka manifolds by entire curves.<br>
-      <a href="https://wwp.shizuoka.ac.jp/masanori-adachi/2017rims/" target="_blank">Topology of pseudoconvex domains and analysis of reproducing kernels</a>, Kyoto University, 20–22 November 2017
+      <a href="https://wwp.shizuoka.ac.jp/masanori-adachi/2017rims/" target="_blank">Topology of pseudoconvex domains and analysis of reproducing kernels</a>,
+      Kyoto University, 20–22 November 2017
     </li>
     <li>
       Dense holomorphic curves and universal holomorphic maps.<br>
-      <a href="https://sites.google.com/site/summerseminar2017/" target="_blank">52nd Summer Seminar on Function Theory</a>, Kanpo no Yado Yanagawa, Fukuoka, 6–8 September 2017
+      <a href="https://sites.google.com/site/summerseminar2017/" target="_blank">52nd Summer Seminar on Function Theory</a>,
+      Kanpo no Yado Yanagawa, Fukuoka, 6–8 September 2017
     </li>
     <li>
       Dense holomorphic curves in spaces of holomorphic maps.<br>
-      Seminar on Analytic Geometry, Nagoya University, 1 May 2017
+      Seminar on Analytic Geometry,
+      Nagoya University, 1 May 2017
     </li>
     <li>
       Dense holomorphic curves in spaces of holomorphic maps.<br>
-      <a href="https://www.ms.u-tokyo.ac.jp/seminar/2017/sem17-072.html" target="_blank">Seminar on Geometric Complex Analysis</a>, The University of Tokyo, 17 April 2017
+      <a href="https://www.ms.u-tokyo.ac.jp/seminar/2017/sem17-072.html" target="_blank">Seminar on Geometric Complex Analysis</a>,
+      The University of Tokyo, 17 April 2017
     </li>
     <li>
       Dense holomorphic curves in spaces of holomorphic maps.<br>
-      <a href="http://www.math.sci.osaka-u.ac.jp/seminar/semHist2017.html" target="_blank">Geometry Seminar</a>, Osaka University, 10 April 2017
+      <a href="http://www.math.sci.osaka-u.ac.jp/seminar/semHist2017.html" target="_blank">Geometry Seminar</a>,
+      Osaka University, 10 April 2017
     </li>
     <li>
       Dense holomorphic curves in spaces of holomorphic maps.<br>
-      Komaba Seminar on Complex Geometry, The University of Tokyo, 6–8 March 2017
+      Komaba Seminar on Complex Geometry,
+      The University of Tokyo, 6–8 March 2017
     </li>
     <li>
       Holomorphic flexibility properties of configuration spaces, symmetric products and Douady spaces.<br>
-      <a href="https://sites.google.com/view/hirokazu-shimauchi/51th-summer-seminar" target="_blank">51st Summer Seminar on Function Theory</a>, Hotel Sekifu, Yamanashi, 2–4 September 2016
+      <a href="https://sites.google.com/view/hirokazu-shimauchi/51th-summer-seminar" target="_blank">51st Summer Seminar on Function Theory</a>,
+      Hotel Sekifu, Yamanashi, 2–4 September 2016
     </li>
   </ol>
   <hr>
   <a name="CV"><h2>Curriculum Vitae</h2></a>
   Yuta Kusakabe<br>
-  Born on May 22, 1993 in Aichi, Japan.<br>
+  Born on May 22, 1993 in Aichi, Japan.
   <h3>Education</h3>
-  <table>
-    <tr>
-      <td valign="top">
-        March 2018
-      </td>
-      <td>
-      </td>
-      <td>
-        Master of Science<br>
-        Graduate School of Science, Osaka University<br>
-        Adivisor: Katsutoshi Yamanoi
-      </td>
-    </tr>
-    <tr>
-      <td valign="top">
-        March 2016
-      </td>
-      <td>
-      </td>
-      <td>
-        Bachelor of Science<br>
-        School of Science, Nagoya University<br>
-        Advisor: Takeo Ohsawa
-      </td>
-    </tr>
-  </table>
+  <dl>
+    <dt>March 2018</dt>
+      <dd>Master of Science</dd>
+      <dd>Graduate School of Science, Osaka University</dd>
+      <dd>Adivisor: Katsutoshi Yamanoi</dd>
+    <dt>March 2016</dt>
+      <dd>Bachelor of Science</dd>
+      <dd>School of Science, Nagoya University</dd>
+      <dd>Advisor: Takeo Ohsawa</dd>
+  </dl>
   <h3>Employment / Fellowships</h3>
-  <table>
-    <tr>
-      <td valign="top">
-        April 2018–
-      </td>
-      <td>
-      </td>
-      <td>
-        JSPS Research Fellow (DC1)<br>
-        Japan Society for the Promotion of Science
-      </td>
-    </tr>
-    <tr>
-      <td valign="top">
-        April 2017–March 2018
-      </td>
-      <td>
-      </td>
-      <td>
-        Research Assistant<br>
-        Graduate School of Science, Osaka University
-      </td>
-    </tr>
-  </table>
+  <dl>
+    <dt>April 2018–</dt>
+      <dd>JSPS Research Fellow (DC1)</dd>
+      <dd>Japan Society for the Promotion of Science</dd>
+    <dt>April 2017–March 2018</dt>
+      <dd>Research Assistant</dd>
+      <dd>Graduate School of Science, Osaka University</dd>
+  </dl>
   <h3>Teaching</h3>
   Teaching Assistant at Graduate School of Science, Osaka University:
-  <table>
-    <tr>
-      <td valign="top">
-        April 2020–
-      </td>
-      <td>
-      </td>
-      <td>
-        Advanced Complex Analysis (Exercise Session)<br>
-        Lecturer: Shinpei Baba
-      </td>
-    </tr>
-    <tr>
-      <td valign="top">
-        October 2019–March 2020
-      </td>
-      <td>
-      </td>
-      <td>
-        Geometry 2 (Exercise Session)<br>
-        Lecturer: Yasuhiro Hara
-      </td>
-    </tr>
-    <tr>
-      <td valign="top">
-        October 2019–March 2020
-      </td>
-      <td>
-      </td>
-      <td>
-        Geometry 1 (Exercise Session)<br>
-        Lecturer: Yoshihiko Matsumoto
-      </td>
-    </tr>
-    <tr>
-      <td valign="top">
-        April 2019–September 2019
-      </td>
-      <td>
-      </td>
-      <td>
-        Advanced Complex Analysis (Exercise Session)<br>
-        Lecturer: Katsutoshi Yamanoi
-      </td>
-    </tr>
-    <tr>
-      <td valign="top">
-        April 2019–September 2019
-      </td>
-      <td>
-      </td>
-      <td>
-        Advanced Calculus (Exercise Session)<br>
-        Lecturer: Takahisa Inui
-      </td>
-    </tr>
-    <tr>
-      <td valign="top">
-        October 2018–March 2019
-      </td>
-      <td>
-      </td>
-      <td>
-        Complex Analysis (Exercise Session)<br>
-        Lecturer: Hideaki Sunagawa
-      </td>
-    </tr>
-    <tr>
-      <td valign="top">
-        April 2018–September 2018
-      </td>
-      <td>
-      </td>
-      <td>
-        Point-Set Topology and Multivariable Calculus (Exercise Session)<br>
-        Lecturer: Kazuki Tokimoto
-      </td>
-    </tr>
-  </table>
-  <br>
+  <dl>
+    <dt>April 2020–</dt>
+      <dd>Advanced Complex Analysis (Exercise Session)</dd>
+      <dd>Lecturer: Shinpei Baba</dd>
+    <dt>October 2019–March 2020</dt>
+      <dd>Geometry 2 (Exercise Session)</dd>
+      <dd>Lecturer: Yasuhiro Hara</dd>
+    <dt>October 2019–March 2020</dt>
+      <dd>Geometry 1 (Exercise Session)</dd>
+      <dd>Lecturer: Yoshihiko Matsumoto</dd>
+    <dt>April 2019–September 2019</dt>
+      <dd>Advanced Complex Analysis (Exercise Session)</dd>
+      <dd>Lecturer: Katsutoshi Yamanoi</dd>
+    <dt>April 2019–September 2019<dt>
+      <dd>Advanced Calculus (Exercise Session)</dd>
+      <dd>Lecturer: Takahisa Inui</dd>
+    <dt>October 2018–March 2019</dt>
+      <dd>Complex Analysis (Exercise Session)</dd>
+      <dd>Lecturer: Hideaki Sunagawa</dd>
+    <dt>April 2018–September 2018</dt>
+      <dd>Point-Set Topology and Multivariable Calculus (Exercise Session)</dd>
+      <dd>Lecturer: Kazuki Tokimoto</dd>
+  </dl>
   Teaching Assistant at Center for Education in Liberal Arts and Sciences, Osaka University:
-  <table>
-    <tr>
-      <td valign="top">
-        October 2017–March 2018
-      </td>
-      <td>
-      </td>
-      <td>
-        Calculus B (Problem Session)<br>
-        Lecturer: Naotake Takao
-      </td>
-    </tr>
-    <tr>
-      <td valign="top">
-        April 2017–September 2017
-      </td>
-      <td>
-      </td>
-      <td>
-        Calculus A (Problem Session)<br>
-        Lecturer: Naotake Takao
-      </td>
-    </tr>
-  </table>
+  <dl>
+    <dt>October 2017–March 2018</dt>
+      <dd>Calculus B (Problem Session)</dd>
+      <dd>Lecturer: Naotake Takao</dd>
+    <dt>April 2017–September 2017</dt>
+      <dd>Calculus A (Problem Session)</dd>
+      <dd>Lecturer: Naotake Takao</dd>
+  </dl>
   <hr>
   <script>
     document.write('<div style="text-align:right">Last updated: ' + document.lastModified+'</div>');
