--- a/index.html
+++ b/index.html
@@ -14,27 +14,25 @@
   <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
   <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
   <style>
-    dt{
+    dt {
       float:left;
     }
-    dd{
+    dd {
       margin-left:200px;
     }
   </style>
 </head>
 <body>
+  <header><h1>Yuta Kusakabe / 日下部佑太</h1></header>
   <div style="display:table">
     <div style="display:table-cell;vertical-align:middle">
-      <a href="img/joku-iko.jpg"><img src="img/joku-iko_s.jpg" style="width:240px;margin:10px"></a>
+      <a href="img/joku-iko.jpg"><img src="img/joku-iko_s.jpg" style="width:240px;margin-right:10px"></a>
     </div>
     <div style="display:table-cell;vertical-align:middle">
-      <header><h1>Yuta Kusakabe / 日下部佑太</h1></header>
       <main>
         <p>Ph.D. Student</p>
         <p>
-          <a href="http://www.math.sci.osaka-u.ac.jp/eng/index.html" target="_blank">Department of Mathematics,
-          Graduate School of Science,
-          Osaka University</a>,
+          <a href="http://www.math.sci.osaka-u.ac.jp/eng/index.html" target="_blank">Department of Mathematics, Graduate School of Science, Osaka University</a>,<br>
           Toyonaka, Osaka 560-0043, Japan
         </p>
         <p><a href="#CV">Curriculum Vitae</a></p>
